--- a/package.json
+++ b/package.json
@@ -5,11 +5,14 @@
   "main": "app.js",
   "scripts": {
     "dev": "webpack serve --open",
-    "build": "webpack"
+    "build": "webpack --mode production",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "homepage": "https://ranggadwias.github.io/submission-story-app",
   "dependencies": {
     "idb": "^8.0.3",
     "leaflet": "^1.9.4"
@@ -19,6 +22,7 @@
     "@babel/preset-env": "^7.27.2",
     "babel-loader": "^10.0.0",
     "copy-webpack-plugin": "^13.0.0",
+    "gh-pages": "^6.3.0",
     "html-webpack-plugin": "^5.6.3",
     "live-server": "^1.2.2",
     "webpack": "^5.99.9",
